# ComputerVision

./: CMakeLists.txt  Debug.cpp  Debug.h  DirectoryReader.cpp  DirectoryReader.h  FileWriter.cpp  FileWriter.h  ImageMatcher.cpp  ImageMatcher.h  MVE.sln  MVE.vcxproj  MVE.vcxproj.filters  Main - Old.cpp  Main.cpp  StructureFromMotion.cpp  StructureFromMotion.h  Visualizer.cpp  Visualizer.h  output.ply
x64/Debug/: MVE.exe.recipe  MVE.ilk  MVE.vcxproj.FileListAbsolute.txt
x64/Debug/MVE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MVE.lastbuildstate  MVE.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
